[metadata]
name = faafo
summary = First App Application for OpenStack
description-file =
    README.rst
author = OpenStack Documentation
author-email = openstack-doc@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    faafo
scripts =
    bin/faafo-producer
    bin/faafo-worker
extra_files =
    faafo/api/templates/index.html
    faafo/api/settings.cfg

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
     faafo-api = faafo.api.service:main
oslo.config.opts =
      faafo.api = faafo.api.service:list_opts
      faafo.producer = faafo.producer.service:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[pbr]
warnerrors = true
